--- a/index.html
+++ b/index.html
@@ -18,7 +18,26 @@
     />
   </head>
   <body>
-    <h1>hi there</h1>
+    <!-- header design -->
+    <header>
+      <!-- logo -->
+      <a href="#" class="logo"><img src="img/logo.svg" alt="" /></a>
+      <nav>
+        <!-- nav items -->
+        <ul class="navbar">
+          <li><a href="#" class="active">Home</a></li>
+          <li><a href="#">Products</a></li>
+          <li><a href="#">Contacts</a></li>
+        </ul>
+
+        <div class="icons">
+          <a href="#"><i class="ri-shopping-cart-2-line"></i></a>
+          <a href="#"><i class="ri-user-3-line"></i></a>
+          <div>|</div>
+          <div class="bx bx-menu-alt-right" id="menu-icon"></div>
+        </div>
+      </nav>
+    </header>
 
     <!-- script tags -->
     <script src="./js/app.js"></script>
